Feat: - change to Jenkinsfile - added test_app.py
refactor:
- change page_404.html and index.html texts
- change app.py host to HOST, IP to HOST

--- a/templates/page_404.html
+++ b/templates/page_404.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 <h1>
-	Sorry the page a lie.
+	Sorry the page is a lie.
 </h1>
 	<p>Error 404</p>
 {% endblock %}
