feat: add kubernetes pod template

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,8 @@
 {% endblock %}
 {% block content %}
 <p>
-	Welcome
+	Welcome<br>
+	This was made at {{ deploy_date }}, Time: {{ deploy_time }}<br>
+	With GIT SHA: {{ git_sha }}
 </p>
 {% endblock %}
