feat: add kubernetes pod template

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 <p>
-	Welcome<br>
+	Welcome to build: #{{ build_number }}<br>
 	This was made at {{ deploy_date }}, Time: {{ deploy_time }}<br>
 	With GIT SHA: {{ git_sha }}
 </p>
